# seaseer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/agents/: seaseer-dev.json  seaseer-reviewer.json
.kiro/prompts/: seaseer-dev.md  seaseer-reviewer.md
helper_models/: ResidualBlock.py
helpers/models/: ResidualBlock.py  ResidualNetwork.py
helpers/scripts/: generate_data.py
models/: ResidualBlock.py  ResidualNetwork.py
seaseer/: Makefile  README.md  dataloader.py  eval.py  model.py  train.py
seaseer/model_checkpoints/: checkpoint.txt
seaseer/training_metrics/: metric.txt
tests/: test_generate_data.py  test_models.py
