[project]
name = "seaseer"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-header -rN"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.10",
]
